# urlscope

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  release.yml
specs/001-urlscan-api-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-urlscan-api-wrapper/checklists/: requirements.md
specs/001-urlscan-api-wrapper/contracts/: public-api.md
src/urlscope/: __init__.py  _client.py  _exceptions.py  _http.py  _sync.py
src/urlscope/models/: __init__.py  _quota.py  _result.py  _search.py  _submission.py
tests/: conftest.py  test_artifacts.py  test_auth.py  test_context.py  test_errors.py  test_quota.py  test_result.py  test_retry.py  test_search.py  test_submit.py  test_sync.py
tests/fixtures/: quota_user_live.json  result_clean.json  result_malicious.json  result_scored.json  search_common.json  search_empty.json  search_ip.json  search_malicious.json  submission_error_dns.json  submission_error_override_safety.json  submission_success_optional.json  submission_success_public.json
