[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urlscope"
dynamic = ["version"]
description = "Python wrapper for the urlscan.io API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jan Wychowaniak" },
]
dependencies = [
  "httpx",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "respx",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/urlscope"]

[tool.hatch.version]
path = "src/urlscope/__init__.py"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
